--- a/webapp/src/app/shell/shell.component.scss
+++ b/webapp/src/app/shell/shell.component.scss
@@ -43,6 +43,7 @@
   }
 
   .shell-content {
-    padding: $space-5 $space-4;
+    padding: $space-5 0;
+    overflow-x: hidden;
   }
 }
